# genetic-genealogy

./: LICENSE  README.md  settings.ini  setup.cfg
anonym_example/FTDNA/: FTDNA_match_data.csv  FTDNA_segment_data.csv
anonym_example/FTDNA/shared_matches/: GlexkxDifzhifze_shared_matches.csv  JxohdqxQolgxklsv_shared_matches.csv  XaxjHvmov_shared_matches.csv  YbqqvXkkbKlfo_shared_matches.csv  config.csv
anonym_example/GEDmatch/: GEDmatch_match_data.csv  GEDmatch_segments_gl.csv  GEDmatch_segments_gss.csv
anonym_example/GEDmatch/shared_matches/: GlexkkxDiXrzhifze_shared_matches.csv  config.csv
boxes/segments/: segment_intersections.py
databases/: match_databases.py  segment_databases.py
parsers/: headers.py  match_parsers.py  segment_data_parsers.py  shared_matches_parser.py
source/: config_reader.py
source/boxes/segments/: intersection_finder.py  segment_intersections.py
source/databases/: database.py  databases.py  match_database.py  match_databases.py  segment_database.py  segment_databases.py
source/parsers/: formats.py  headers.py  match_parsers.py  segment_data_parsers.py  shared_matches_parser.py
source/usage/: find_segment_intersections.py
source/usage/filter/: filter_clusters.py  filter_matches.py  filter_segments.py
source/usage/parse/: parse_matches.py  parse_segments.py  parse_shared_matches.py
src/: config_reader.py  create_new_project.py  csv_io.py
src/boxes/segments/: intersection_finder.py
src/databases/: csv_io.py  match_database.py  segment_database.py
src/genetic_genealogy/: config_reader.py  csv_io.py  exit_codes.py  gengen.py  helper.py
src/genetic_genealogy/boxes/segments/: intersection_finder.py
src/genetic_genealogy/databases/: database.py  match_database.py  segment_database.py
src/genetic_genealogy/parsers/: formats.py  match_parsers.py  segment_data_parsers.py  shared_matches_parser.py
src/genetic_genealogy/project/: checkout_project.py  config_helper.py  config_reader.py  create_new_project.py  current_project.py  delete_project.py  list_projects.py  project_helper.py
src/genetic_genealogy/project/templates/: global_config_template.ini  project_config_template.ini
src/genetic_genealogy/usage/: find_segment_intersections.py
src/genetic_genealogy/usage/parse/: parse_matches.py  parse_segments.py  parse_shared_matches.py
src/parsers/: formats.py  match_parsers.py  segment_data_parsers.py  shared_matches_parser.py
src/project/: checkout_project.py  create_new_project.py  delete_project.py  list_projects.py
src/usage/: find_segment_intersections.py
src/usage/parse/: parse_matches.py  parse_segments.py  parse_shared_matches.py
usage/: find_segment_intersections.py  parse_matches.py  parse_segments.py  parse_shared_matches.py
usage/parse/: parse_matches.py  parse_segments.py
