[metadata]
name = genetic-genealogy
version = 0.0.1
author = Zuzana Cernohousova
author_email = cernohz@natur.cuni.cz
description = Package used for
long_description = file: README.md
keywords = genetics, genealogy
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    appdirs

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    create-project = src.project.create_new_project:create_new_project
