[metadata]
name = genetic-genealogy
version = 0.0.1
author = Zuzana Cernohousova
author_email = cernohz@natur.cuni.cz
description = Package used for
long_description = file: README.md
keywords = genetics, genealogy
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    appdirs

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    create-project = project.create_new_project:create_new_project
    delete-project = project.delete_project:delete_project
    list-projects = project.list_projects:list_projects
    checkout-project = project.checkout_project:checkout_project
    parse-matches = usage.parse.parse_matches:parse_matches
    parse-segments = usage.parse.parse_segments:parse_segments
    parse-shared-matches = usage.parse.parse_shared_matches:parse_shared_matches
    find-intersections = usage.find_segment_intersections:find_segment_intersections
